/*
 * $Id: ChangeLog,v 1.2375 2004/02/23 00:54:24 peterrees Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-02-23 00:40 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@brturbo.com>
  * contrib/libct/disk.c
    ! minor fix to dirname() function

2004-02-23 14:05 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/idle.c
    ! hb_idleDelFunc() - fix memory leak

2004-02-23 13:15 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/inkey.c
    ! SetInkeyBeforeBlock()/SetInkeyAfterBlock() - fix possible memory leaks
  * source/rtl/gtwvt/gtwvt.c
    + hb_wvt_gtTextOut() - altered to handle ClearType fonts correctly
       ( Thanks to Oscar Hernandez Suarez )

2004-02-23 05:10 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * include/hbapi.h
  * source/common/hbstr.c
    + char *hb_xstrcpy( char*, const char*, ...) -> concatenates multiple
      strings into a single result.

  + tests/xstrcpy.prg
    * test program for hb_xstrcpy()

2004-02-23 03:40 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * include/hbapi.h
  * source/common/hbstr.c
    + char *hb_xstrcat( char*, const char*, ...) -> concatenates multiple
      strings into a single result.

  + tests/xstrcat.prg
    * test program for hb_xstrcat()

  * source/rtl/len.c
  * source/rtl/empty.c
    % Optimization by directly using member of PHB_ITEM

  * source/rtl/is.c
    + PRG level wrappers for some macros:
      * ISALNUM()
      * ISCNTRL()
      * ISGRAPH()
      * ISPRINT()
      * ISPUNCT()
      * ISSPACE()
      * ISXDIGIT()
      * ISASCII()
      /*
        Full description is in program body
      */

2004-02-22 18:01 UTC+0100 Giancarlo Niccolai <gc [at] niccolai [dot] ws>
  + doc/howtoext.txt
    + beginned a small tutorial on essential things to know to write an
      xharbour extension. Important notes on memory usage and concepts.