@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2375 2004/02/23 00:54:24 peterrees Exp $
+ * $Id: ChangeLog,v 1.2376 2004/02/23 03:35:29 lculik Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,14 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2004-02-23 11:10 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
+  * source/vm/itemapi.c
+    % optimize hb_itemPadConv() to directly use member of PHB_ITEM.
+
+  * source/rtl/chrasc.c
+  * source/rtl/right.c
+  * source/rtl/hardcr.c
+    % optimize to directly use member of PHB_ITEM.
 
 2004-02-23 00:40 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@brturbo.com>
   * contrib/libct/disk.c
